HTML_header link

--- a/index.html
+++ b/index.html
@@ -6,8 +6,68 @@
     <title>So Hee Park</title>
     <meta name="description" content="So Hee Park's Portfolio">
     <link rel="shortcut icon" href="./images/hello.png" type="image/x-icon">
+        <!-- OG (Open Graph Data) -->
+        <meta property="og:title" content="엘리의 포트폴리오" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="배포후 생성된 URL" />
+        <meta property="og:image" content="배포후에 생성된 이미지 URL" />
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"/>
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/9eb162ac0d.js" crossorigin="anonymous" ></script>
+        <!-- CSS -->
+        <link rel="stylesheet" href="css/style.css" />
+        <!-- Javascript -->
+        <script src="src/main.js" defer></script>
 </head>
 <body>
-    
+    <!-- / Header -->
+    <header>
+        <div>
+            <img src="images/favicon.png" alt="logo" />
+            <h1><a href="#">So Hee Park</a></h1>
+          </div>
+          <nav>
+            <ul>
+              <li><a href="#home">Portfolio Home</a></li>
+              <li><a href="#introduction">Introduction</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#project1">DrugStore Project</a></li>
+              <li><a href="#project2">Movie Project</a></li>
+              <li><a href="#thesis">Thesis</a></li>
+              <li><a href="#certificate">Certificate</a></li>
+              <li><a href="#education">Education</a></li>
+              <li><a href="#experience">Additional Experience</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+    </header>
+    <!-- Main -->
+    <main>
+        <!-- Home -->
+        <section></section>
+        <!-- Introduction -->
+        <section></section>
+        <!-- Skills -->
+        <section></section>
+        <!-- Project 1 -->
+        <section></section>
+        <!-- Project 2 -->
+        <section></section>
+        <!-- Masters Thesis -->
+        <section></section>
+        <!-- Certificate -->
+        <section></section>
+        <!-- Education -->
+        <section></section>
+        <!-- Aditional Experience -->
+        <section></section>
+        <!-- Arrow -->
+        <aside></aside>
+    </main>
+    <!-- Footer -->
+    <footer></footer>
 </body>
 </html>
