--- a/index.html
+++ b/index.html
@@ -26,44 +26,49 @@
     <!-- / Header -->
     <header>
         <div>
-            <img src="images/favicon.png" alt="logo" />
+            <img src="images/profile.png" alt="logo" />
             <h1><a href="#">So Hee Park</a></h1>
-          </div>
-          <nav>
+            </div>
+            <nav>
             <ul>
-              <li><a href="#home">Portfolio Home</a></li>
-              <li><a href="#introduction">Introduction</a></li>
-              <li><a href="#skills">Skills</a></li>
-              <li><a href="#project1">DrugStore Project</a></li>
-              <li><a href="#project2">Movie Project</a></li>
-              <li><a href="#thesis">Thesis</a></li>
-              <li><a href="#certificate">Certificate</a></li>
-              <li><a href="#education">Education</a></li>
-              <li><a href="#experience">Additional Experience</a></li>
-              <li><a href="#contact">Contact</a></li>
+                <li><a href="#home">Portfolio Home</a></li>
+                <li><a href="#introduction">Introduction</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#project1">DrugStore Project</a></li>
+                <li><a href="#project2">Movie Project</a></li>
+                <li><a href="#thesis">Thesis</a></li>
+                <li><a href="#certificate">Certificate</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#experience">Additional Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
-          </nav>
+            </nav>
     </header>
     <!-- Main -->
     <main>
         <!-- Home -->
-        <section></section>
+        <section id="home">
+            <img src="images/profile.png" alt="So Hee's profile picture" />
+            <h2>So Hee Park</h2>
+            <p>Junior Backend Developer</p>
+            <a href="#contact">Contact</a>
+        </section>
         <!-- Introduction -->
-        <section></section>
+        <section id="introduction"></section>
         <!-- Skills -->
-        <section></section>
+        <section id="skills"></section>
         <!-- Project 1 -->
-        <section></section>
+        <section id="project1"></section>
         <!-- Project 2 -->
-        <section></section>
+        <section id="project2"></section>
         <!-- Masters Thesis -->
-        <section></section>
+        <section id="thesis"></section>
         <!-- Certificate -->
-        <section></section>
+        <section id="certificate"></section>
         <!-- Education -->
-        <section></section>
+        <section id="education"></section>
         <!-- Aditional Experience -->
-        <section></section>
+        <section id="experience"></section>
         <!-- Arrow -->
         <aside></aside>
     </main>
