--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <nav>
             <ul>
-                <li><a href="#home">Portfolio Home</a></li>
+                <li><a href="#home">Portfolio</a></li>
                 <li><a href="#introduction">Introduction</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#project1">DrugStore Project</a></li>
@@ -54,7 +54,56 @@
             <a href="#contact">Contact</a>
         </section>
         <!-- Introduction -->
-        <section id="introduction"></section>
+        <section id="introduction">
+            <h2>Introduction</h2>
+            <p>
+                Enlightenment of understanding the underlying mechanisms of web has driven me into the field of backend. 
+                Passionate about designing and materializing applications tailored to client needs. 
+                Eager to handle high-traffic systems, enhance security and deployment. 
+                With proficiency in Java, developed and maintained services for education and seniors.
+                Demonstrated strong problem-solving skills by optimizing exception handling and improving system performance. 
+                Place great value in communicating with colleagues.
+                Appreciate code reviews and feedback for refactoring.
+            </p>
+            <ul>
+                <li>
+                <i class="fa-solid fa-code"></i>
+                <p>Hard Skills</p>
+                    <p>Java, SpringBoot, IntelliJ, Git, Github, Postman</p>
+                    <p>AWS, MySQL, SQL, MariaDB</p>
+                    <p>MS Word, Excel, Powerpoint</p>
+                </li>
+
+                <li>
+                <i class="fa-solid fa-gear"></i>
+                <i class="fa-solid fa-screwdriver-wrench"></i>
+                <p>Soft Skills</p>
+                <p>Leadership</p>
+                <p>Goal-Oriented</p>
+                <p>Adventurous</p>
+                </li>
+
+                <li>
+                <i class="fa-solid fa-comment"></i>
+                <p>Languages</p>
+                <p>English(native)</p>
+                <p>Spanish(advanced)</p>
+                <p>Korean(native)</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                <img src="images/edu-remove.png" alt="edu ministry logo" />
+                <div>
+                    <p>Elementry School Teacher</p>
+                    <p>Sineun Elementary School, Seoul, Korea</p>
+                    <li>Specialized in programming education for elementary students.</li>
+                    <li>Professional experience in coding education.</li>
+                    <p>March 2020 - Feb. 2023</p>
+                </div>
+                </li>
+            </ul>
+        </section>
         <!-- Skills -->
         <section id="skills"></section>
         <!-- Project 1 -->
