--- a/index.html
+++ b/index.html
@@ -105,7 +105,58 @@
             </ul>
         </section>
         <!-- Skills -->
-        <section id="skills"></section>
+        <section id="skills">
+            <h2>Skills</h2>
+            <p>Experience with developing and safeguarding web applications. 
+                Confident in developing full frontend and backend. 
+                Capable of working within a team environment and independently. 
+                Ability to plan, lead organizations under strict timelines and adapt quickly. 
+            </p>
+        <div>
+            <section>
+            <h3>Coding Skills</h3>
+            <ul>
+                <li>
+                <div><span>JAVA</span><span>98%</span></div>
+                <div><div style="width: 80%"></div></div>
+                </li>
+                <li>
+                <div><span>Python</span><span>90%</span></div>
+                <div><div style="width: 30%"></div></div>
+                </li>
+                <li>
+                <div><span>HTML</span><span>90%</span></div>
+                <div><div style="width: 90%"></div></div>
+                </li>
+                <li>
+                <div><span>CSS</span><span>80%</span></div>
+                <div><div style="width: 80%"></div></div>
+                </li>
+                <li>
+                <div><span>JavaScript</span><span>79%</span></div>
+                <div><div style="width: 79%"></div></div>
+                </li>
+            </ul>
+            </section>
+            <section>
+            <h3>Tools</h3>
+            <ul>
+                <li>Visual Studio Code</li>
+                <li>IntelliJ</li>
+                <li>Amazon Web Services</li>
+                <li>Postman</li>
+                <li>Github</li>
+            </ul>
+            </section>
+            <section>
+            <h3>Languages</h3>
+            <ul>
+                <li>English</li>
+                <li>Spanish</li>
+                <li>Korean</li>
+            </ul>
+            </section>
+        </div>
         <!-- Project 1 -->
         <section id="project1"></section>
         <!-- Project 2 -->
