--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 Ability to plan, lead organizations under strict timelines and adapt quickly. 
             </p>
         <div>
+            <!-- coding skills -->
             <section>
             <h3>Coding Skills</h3>
             <ul>
@@ -138,6 +139,7 @@
                 </li>
             </ul>
             </section>
+            <!-- tools -->
             <section>
             <h3>Tools</h3>
             <ul>
@@ -148,6 +150,12 @@
                 <li>Github</li>
             </ul>
             </section>
+            <!-- certificate -->
+            <section>
+                <h3>Certificate</h3>
+                <img src="/images/SecurityPlus Logo Certified CE.png" alt="compTia">
+                </section>
+            <!-- languages -->
             <section>
             <h3>Languages</h3>
             <ul>
@@ -157,18 +165,120 @@
             </ul>
             </section>
         </div>
+    </section>
         <!-- Project 1 -->
-        <section id="project1"></section>
+        <section id="project1">
+            <h2>DrugStore Project</h2>
+            <section id="intro">
+                <p>Developed an open market service to buy and sell cosmetic products.</p>
+                <p>FrontEnd: 3, Backend:6</p>
+                <p>May 2024 - July 2024</p>
+                <a href="https://drugstoreproject-seyeons-projects-fed8a2e8.vercel.app/">Deploy Site</a>
+                <a href="https://drugstoreproject.shop/swagger-ui/index.html">Swagger</a>
+                <a href="https://github.com/DrugStoreWeb/DrugStore-BE">Github</a>
+                <a href="https://www.youtube.com/watch?v=reaXKuAoctQ&feature=youtu.be">Demonstration Video</a>
+            </section>
+            <section id="photos">
+                <div>
+                    <img src="images/erd.png" alt="Database Design" />
+                    <p>ERD</p>
+                </div>
+                <div>
+                    <img src="images/main1.png" alt="Main Page" />
+                    <p>Main Page</p>
+                </div>
+                <div>
+                    <img src="images/cart1.png" alt="Cart Page" />
+                    <p>Cart Page</p>
+                </div>
+                <div>
+                    <img src="images/order1.png" alt="Order Page" />
+                    <p>Order Page</p>
+                </div>
+                <div>
+                    <img src="images/login1.png" alt="Login Page" />
+                    <p>Login Page</p>
+                </div>
+                
+            </section>
+            <section id="contribution">
+                <h3>How I contributed</h3>
+                <li>Buy, sell cosmetic products</li>
+                <li>Product review, </li>
+            </section>
+            <section id="skillset">
+                <h3>Tools and Skills</h3>
+                <li> Implemented Jasypt for encrypting confidential data. Environment variables decreased from 19 to 1.</li>
+                <li>Configured Nginx, SSL, Route 53 for HTTPS domain. Product register speed improved from 9.26s to 369ms.</li>
+                <li> Utilized Redis and Gmail SMTP for email verification. </li>
+                <li> Applied AWS S3 and IAM for uploading multipart files such as images. </li>
+                <li> Role-based Functionality is supported depending on the roles of seller and buyer, user and admin user.</li>
+                <li> Thorough exception handling for potential issues concerning stocks, money and product status.</li>
+            </section>
+            <section id="troubleshooting">
+                <h3>Trouble Shooting</h3>
+                <div>
+                    <h4>Situation</h4>
+                    <p>SWAP</p>
+                </div>
+                <div>
+                    <h4>Task</h4>
+                    <p>What did you need to achieve?</p>
+                </div>
+                <div>
+                    <h4>Action</h4>
+                    <p>I did this </p>
+                </div>
+                <div>
+                    <h4>Result</h4>
+                    <p>Didnt stop </p>
+                </div>
+            </section>
+        </section>
         <!-- Project 2 -->
-        <section id="project2"></section>
+        <section id="project2">
+            <h2>Movie Reservation Project</h2>
+            <section id="intro"></section>
+            <section id="features"></section>
+            <section id="skillset"></section>
+            <section id="troubleshooting"></section>
+        </section>
         <!-- Masters Thesis -->
-        <section id="thesis"></section>
-        <!-- Certificate -->
-        <section id="certificate"></section>
+        <section id="thesis">
+            <h2>Computer Science Education Masters Thesis</h2>
+            <h3>The effects of Data Science Education using Korean Python on Elementary Students' Computational Thinking</h3>
+            <p>March 2020 - June 2022</p>
+            <a href="https://m.riss.kr/search/detail/DetailView.do?p_mat_type=be54d9b8bc7cdb09&control_no=c459dad2e7bfc619ffe0bdc3ef48d419">Thesis Link</a>
+            <li> Identified the necessity for a means to facilitate ESL students coding with python by using their native language.</li>
+            <li> Developed a Korean to English codes translation tool to facilitate data analysis education for elementary students. </li>
+            <li> Enhanced students' computational thinking from 6.75 to 8.45 out of 10 and attitude towards programming from 33.7 to 36.1. out of 40.</li>
+        </section>
         <!-- Education -->
-        <section id="education"></section>
+        <section id="education">
+            <h2>Education</h2>
+            <div>
+                <h3>Backend Developer Course</h3>
+                <p>Nov. 2023 - July 2023</p>
+                <p>Super Coding Institute</p>
+            </div>
+            <div>
+                <h3>Masters in Computer Science Education</h3>
+                <p>March 2020 - June 2022</p>
+                <p>Seoul National University of Education</p>
+            </div>
+        </section>
         <!-- Aditional Experience -->
-        <section id="experience"></section>
+        <section id="experience">
+            <h2>Additional Experience</h2>
+            <div>
+                <h3>Elementary School Teacher</h3>
+                <p>March 2020 - Feb. 2023</p>
+                <p>Sineun Elementary School, Seoul, Korea</p>
+                <li>Specialized in programming education for elementary students.</li>
+                <li>Professional experience in coding education.</li>
+
+            </div>
+        </section>
         <!-- Arrow -->
         <aside></aside>
     </main>
