--- a/index.html
+++ b/index.html
@@ -276,13 +276,46 @@
                 <p>Sineun Elementary School, Seoul, Korea</p>
                 <li>Specialized in programming education for elementary students.</li>
                 <li>Professional experience in coding education.</li>
-
             </div>
         </section>
         <!-- Arrow -->
-        <aside></aside>
+        <aside>
+            <a href="#home" title="back to top">
+                <i class="fa-solid fa-arrow-up"></i>
+            </a>
+        </aside>
     </main>
     <!-- Footer -->
-    <footer></footer>
+    <footer id="contact">
+        <h2>Contact</h2>
+        <p>
+            <i class="fa-solid fa-envelope"></i>
+            soheeparklee@gmail.com
+        </p>
+        <p>
+            <i class="fa-solid fa-phone"></i>
+            (+34)690721394
+        </p>
+        <ul>
+            <li>
+                <a href="https://github.com/soheeparklee">
+                    <i class="fa-brands fa-github"></i>
+                    Github
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/so-hee-park-a8627329b/">
+                    <i class="fa-brands fa-linkedin"></i>
+                    Linkedin
+                </a>
+            </li>
+            <li>
+                <a href="https://soheeparklee.github.io/">
+                    <i class="fa-solid fa-globe"></i>
+                    Tech Blog
+                </a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
