--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
 </head>
 <body>
     <!-- / Header -->
-    <header>
-        <div>
-            <img src="images/profile.png" alt="logo" />
-            <h1><a href="#">So Hee Park</a></h1>
+    <header class="header">
+        <div class="header__logo">
+            <img class="header__logo__img" src="images/profile.png" alt="logo" />
+            <h1 class="header__logo__title" ><a href="#">So Hee Park</a></h1>
             </div>
             <nav>
-            <ul>
-                <li><a href="#home">Portfolio</a></li>
-                <li><a href="#introduction">Introduction</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#project1">DrugStore Project</a></li>
-                <li><a href="#project2">Movie Project</a></li>
-                <li><a href="#thesis">Thesis</a></li>
-                <li><a href="#certificate">Certificate</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#experience">Additional Experience</a></li>
-                <li><a href="#contact">Contact</a></li>
+            <ul class="header__menu">
+                <li><a class="header__menu__item" href="#home">Portfolio</a></li>
+                <li><a class="header__menu__item" href="#introduction">Introduction</a></li>
+                <li><a class="header__menu__item" href="#skills">Skills</a></li>
+                <li><a class="header__menu__item" href="#project1">DrugStore Project</a></li>
+                <li><a class="header__menu__item" href="#project2">Movie Project</a></li>
+                <li><a class="header__menu__item" href="#thesis">Thesis</a></li>
+                <li><a class="header__menu__item" href="#certificate">Certificate</a></li>
+                <li><a class="header__menu__item" href="#education">Education</a></li>
+                <li><a class="header__menu__item" href="#experience">Additional Experience</a></li>
+                <li><a class="header__menu__item" href="#contact">Contact</a></li>
             </ul>
             </nav>
     </header>
@@ -48,10 +48,10 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <img src="images/profile.png" alt="So Hee's profile picture" />
-            <h2>So Hee Park</h2>
-            <p>Junior Backend Developer</p>
-            <a href="#contact">Contact</a>
+            <img class="home__avatar" src="images/profile.png" alt="So Hee's profile picture" />
+            <h2 class="home__title" >So Hee <strong class="home__title--strong">Park</strong> </h2>
+            <p class="home__description">Junior Backend Developer</p>
+            <a class="home__contact" href="#contact">Contact</a>
         </section>
         <!-- Introduction -->
         <section id="introduction">
