--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <a class="home__contact" href="#contact">Contact</a>
         </section>
         <!-- Introduction -->
-        <section id="introduction">
-            <h2>Introduction</h2>
-            <p>
+        <section id="introduction" class="section">
+            <h2 class="title">Introduction</h2>
+            <p class="description">
                 Enlightenment of understanding the underlying mechanisms of web has driven me into the field of backend. 
                 Passionate about designing and materializing applications tailored to client needs. 
                 Eager to handle high-traffic systems, enhance security and deployment. 
@@ -105,9 +105,9 @@
             </ul>
         </section>
         <!-- Skills -->
-        <section id="skills">
-            <h2>Skills</h2>
-            <p>Experience with developing and safeguarding web applications. 
+        <section id="skills" class="section">
+            <h2 class="title">Skills</h2>
+            <p class="description"> Experience with developing and safeguarding web applications. 
                 Confident in developing full frontend and backend. 
                 Capable of working within a team environment and independently. 
                 Ability to plan, lead organizations under strict timelines and adapt quickly. 
@@ -167,8 +167,8 @@
         </div>
     </section>
         <!-- Project 1 -->
-        <section id="project1">
-            <h2>DrugStore Project</h2>
+        <section id="project1" class="section">
+            <h2 class="title">DrugStore Project</h2>
             <section id="intro">
                 <p>Developed an open market service to buy and sell cosmetic products.</p>
                 <p>FrontEnd: 3, Backend:6</p>
@@ -236,8 +236,8 @@
             </section>
         </section>
         <!-- Project 2 -->
-        <section id="project2">
-            <h2>Movie Reservation Project</h2>
+        <section id="project2" class="section">
+            <h2 class="title">Movie Reservation Project</h2>
             <section id="intro"></section>
             <section id="features"></section>
             <section id="skillset"></section>
@@ -245,7 +245,7 @@
         </section>
         <!-- Masters Thesis -->
         <section id="thesis">
-            <h2>Computer Science Education Masters Thesis</h2>
+            <h2 class="title">Computer Science Education Masters Thesis</h2>
             <h3>The effects of Data Science Education using Korean Python on Elementary Students' Computational Thinking</h3>
             <p>March 2020 - June 2022</p>
             <a href="https://m.riss.kr/search/detail/DetailView.do?p_mat_type=be54d9b8bc7cdb09&control_no=c459dad2e7bfc619ffe0bdc3ef48d419">Thesis Link</a>
@@ -255,7 +255,7 @@
         </section>
         <!-- Education -->
         <section id="education">
-            <h2>Education</h2>
+            <h2 class="title">Education</h2>
             <div>
                 <h3>Backend Developer Course</h3>
                 <p>Nov. 2023 - July 2023</p>
@@ -268,8 +268,8 @@
             </div>
         </section>
         <!-- Aditional Experience -->
-        <section id="experience">
-            <h2>Additional Experience</h2>
+        <section id="experience" class="section">
+            <h2 class="title">Additional Experience</h2>
             <div>
                 <h3>Elementary School Teacher</h3>
                 <p>March 2020 - Feb. 2023</p>
@@ -286,7 +286,7 @@
         </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact">
+    <footer id="contact" class="section">
         <h2>Contact</h2>
         <p>
             <i class="fa-solid fa-envelope"></i>
