CSSS_order change

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                 <li><a class="header__menu__item" href="#home">Portfolio</a></li>
                 <li><a class="header__menu__item" href="#introduction">Introduction</a></li>
                 <li><a class="header__menu__item" href="#skills">Skills</a></li>
-                <li><a class="header__menu__item" href="#project1">DrugStore Project</a></li>
-                <li><a class="header__menu__item" href="#project2">Movie Project</a></li>
+                <li><a class="header__menu__item" href="#project">Projects</a></li>
                 <li><a class="header__menu__item" href="#thesis">Thesis</a></li>
                 <li><a class="header__menu__item" href="#certificate">Certificate</a></li>
                 <li><a class="header__menu__item" href="#education">Education</a></li>
@@ -116,27 +115,39 @@
             <!-- coding skills -->
             <section>
             <h3>Coding Skills</h3>
+            <p>Started with Python, now in Java. Can make web servers with REST API. </p>
             <ul>
                 <li>
                 <div><span>JAVA</span><span>98%</span></div>
                 <div><div style="width: 80%"></div></div>
                 </li>
                 <li>
-                <div><span>Python</span><span>90%</span></div>
+                <div><span>Spring</span><span>90%</span></div>
                 <div><div style="width: 30%"></div></div>
                 </li>
                 <li>
-                <div><span>HTML</span><span>90%</span></div>
+                <div><span>HTML, CSS</span><span>90%</span></div>
                 <div><div style="width: 90%"></div></div>
                 </li>
                 <li>
-                <div><span>CSS</span><span>80%</span></div>
-                <div><div style="width: 80%"></div></div>
+                <div><span>Github</span><span>50%</span></div>
+                <div><div style="width: 50%"></div></div>
                 </li>
                 <li>
-                <div><span>JavaScript</span><span>79%</span></div>
+                <div><span>AWS</span><span>70%</span></div>
                 <div><div style="width: 79%"></div></div>
                 </li>
+                <li>
+                <div><span>English</span><span>70%</span></div>
+                <div><div style="width: 79%"></div></div>
+                </li>
+                <div><span>Spanish</span><span>70%</span></div>
+                <div><div style="width: 79%"></div></div>
+                </li>
+                <div><span>Korean</span><span>70%</span></div>
+                <div><div style="width: 79%"></div></div>
+                </li>
+
             </ul>
             </section>
             <!-- tools -->
@@ -145,29 +156,16 @@
             <ul>
                 <li>Visual Studio Code</li>
                 <li>IntelliJ</li>
-                <li>Amazon Web Services</li>
                 <li>Postman</li>
                 <li>Github</li>
             </ul>
             </section>
-            <!-- certificate -->
-            <section>
-                <h3>Certificate</h3>
-                <img src="/images/SecurityPlus Logo Certified CE.png" alt="compTia">
-                </section>
-            <!-- languages -->
-            <section>
-            <h3>Languages</h3>
-            <ul>
-                <li>English</li>
-                <li>Spanish</li>
-                <li>Korean</li>
-            </ul>
-            </section>
+
+            
         </div>
     </section>
-        <!-- Project 1 -->
-        <section id="project1" class="section">
+        <!-- Project -->
+        <section id="projects" class="section">
             <h2 class="title">DrugStore Project</h2>
             <section id="intro">
                 <p>Developed an open market service to buy and sell cosmetic products.</p>
@@ -235,14 +233,15 @@
                 </div>
             </section>
         </section>
-        <!-- Project 2 -->
-        <section id="project2" class="section">
-            <h2 class="title">Movie Reservation Project</h2>
-            <section id="intro"></section>
-            <section id="features"></section>
-            <section id="skillset"></section>
-            <section id="troubleshooting"></section>
+        <!-- certificate -->
+        <section id="certificate" class="section">
+            <h2 class="title">Certificates</h2>
+            <section>
+                <h3>CompTia Security+</h3>
+                <img src="/images/SecurityPlus Logo Certified CE.png" alt="compTia">
+            </section>
         </section>
+
         <!-- Masters Thesis -->
         <section id="thesis">
             <h2 class="title">Computer Science Education Masters Thesis</h2>
@@ -253,6 +252,7 @@
             <li> Developed a Korean to English codes translation tool to facilitate data analysis education for elementary students. </li>
             <li> Enhanced students' computational thinking from 6.75 to 8.45 out of 10 and attitude towards programming from 33.7 to 36.1. out of 40.</li>
         </section>
+
         <!-- Education -->
         <section id="education">
             <h2 class="title">Education</h2>
@@ -267,6 +267,7 @@
                 <p>Seoul National University of Education</p>
             </div>
         </section>
+        
         <!-- Aditional Experience -->
         <section id="experience" class="section">
             <h2 class="title">Additional Experience</h2>
@@ -287,7 +288,7 @@
     </main>
     <!-- Footer -->
     <footer id="contact" class="section">
-        <h2>Contact</h2>
+        <h2 class="title">Contact</h2>
         <p>
             <i class="fa-solid fa-envelope"></i>
             soheeparklee@gmail.com
