--- a/index.html
+++ b/index.html
@@ -52,56 +52,61 @@
             <p class="home__description">Junior Backend Developer</p>
             <a class="home__contact" href="#contact">Contact</a>
         </section>
+        <section class="sections">
         <!-- Introduction -->
         <section id="introduction" class="section">
             <h2 class="title">Introduction</h2>
-            <p class="description">
-                Enlightenment of understanding the underlying mechanisms of web has driven me into the field of backend. 
-                Passionate about designing and materializing applications tailored to client needs. 
-                Eager to handle high-traffic systems, enhance security and deployment. 
-                With proficiency in Java, developed and maintained services for education and seniors.
-                Demonstrated strong problem-solving skills by optimizing exception handling and improving system performance. 
-                Place great value in communicating with colleagues.
-                Appreciate code reviews and feedback for refactoring.
+            <h3 class="introduction__bold">Cyber Security</h3>
+            <p class="introduction__description">
+                Enlightenment of understanding the underlying mechanisms of web has driven me into the field of backend. <br> 
+                Played pivotal roles in ensuring web services from cyber attacks. <br>
             </p>
-            <ul>
-                <li>
-                <i class="fa-solid fa-code"></i>
-                <p>Hard Skills</p>
-                    <p>Java, SpringBoot, IntelliJ, Git, Github, Postman</p>
-                    <p>AWS, MySQL, SQL, MariaDB</p>
-                    <p>MS Word, Excel, Powerpoint</p>
+            <h3 class="introduction__bold">Tailored service for client needs</h3>
+            <p class="introduction__description">  
+                tailored to client needs <br>
+                Eager to handle high-traffic, enhance security and deployment.  <br>
+            </p>
+            <h3 class="introduction__bold">Problem solving with colleagues</h3>
+            <p class="introduction__description"> 
+                Demonstrated strong problem-solving skills by optimizing exception handling and improving system performance.  <br>
+                Place great value in communicating with colleagues. <br>
+                Appreciate code reviews and feedback for refactoring. <br>
+            </p>
+            <!-- <p class="description">
+                Enlightenment of understanding the underlying mechanisms of web has driven me into the field of backend. <br>
+                Passionate about designing and materializing applications tailored to client needs.  <br>
+                Eager to handle high-traffic systems, enhance security and deployment.  <br>
+                With proficiency in Java, developed and maintained services for education and seniors. <br>
+                Demonstrated strong problem-solving skills by optimizing exception handling and improving system performance.  <br>
+                Place great value in communicating with colleagues. <br>
+                Appreciate code reviews and feedback for refactoring. <br>
+            </p> -->
+            <ul class="majors">
+                <li class="major">
+                <i class="fa-solid fa-code major__icon"></i>
+                <p class="major__title">Hard Skills</p>
+                    <p class="major__detail">Java, SpringBoot, IntelliJ, Git, Github, Postman</p>
+                    <p class="major__detail">AWS, MySQL, SQL, MariaDB</p>
+                    <p class="major__detail">MS Word, Excel, Powerpoint</p>
                 </li>
 
-                <li>
-                <i class="fa-solid fa-gear"></i>
-                <i class="fa-solid fa-screwdriver-wrench"></i>
-                <p>Soft Skills</p>
-                <p>Leadership</p>
-                <p>Goal-Oriented</p>
-                <p>Adventurous</p>
+                <li class="major">
+                <i class="fa-solid fa-screwdriver-wrench major__icon"></i>
+                <p class="major__title">Soft Skills</p>
+                    <p class="major__detail">Leadership</p>
+                    <p class="major__detail">Goal-Oriented</p>
+                    <p class="major__detail">Adventurous</p>
                 </li>
 
-                <li>
-                <i class="fa-solid fa-comment"></i>
-                <p>Languages</p>
-                <p>English(native)</p>
-                <p>Spanish(advanced)</p>
-                <p>Korean(native)</p>
+                <li class="major">
+                <i class="fa-solid fa-comment major__icon"></i>
+                <p class="major__title">Languages</p>
+                    <p class="major__detail">English(native)</p>
+                    <p class="major__detail">Spanish(advanced)</p>
+                    <p class="major__detail">Korean(native)</p>
                 </li>
             </ul>
-            <ul>
-                <li>
-                <img src="images/edu-remove.png" alt="edu ministry logo" />
-                <div>
-                    <p>Elementry School Teacher</p>
-                    <p>Sineun Elementary School, Seoul, Korea</p>
-                    <li>Specialized in programming education for elementary students.</li>
-                    <li>Professional experience in coding education.</li>
-                    <p>March 2020 - Feb. 2023</p>
-                </div>
-                </li>
-            </ul>
+            
         </section>
         <!-- Skills -->
         <section id="skills" class="section">
@@ -267,18 +272,25 @@
                 <p>Seoul National University of Education</p>
             </div>
         </section>
-        
+
         <!-- Aditional Experience -->
         <section id="experience" class="section">
             <h2 class="title">Additional Experience</h2>
             <div>
-                <h3>Elementary School Teacher</h3>
-                <p>March 2020 - Feb. 2023</p>
-                <p>Sineun Elementary School, Seoul, Korea</p>
-                <li>Specialized in programming education for elementary students.</li>
-                <li>Professional experience in coding education.</li>
+                <div>
+                    <img src="images/edu-remove.png" alt="edu ministry logo" />
+                </div>
+                <div>
+                    <h3>Elementary School Teacher</h3>
+                    <p>March 2020 - Feb. 2023</p>
+                    <p>Sineun Elementary School, Seoul, Korea</p>
+                    <li>Specialized in programming education for elementary students.</li>
+                    <li>Professional experience in coding education.</li>
+                </div>
             </div>
         </section>
+    </section>
+
         <!-- Arrow -->
         <aside>
             <a href="#home" title="back to top">
