--- a/index.html
+++ b/index.html
@@ -123,26 +123,56 @@
                     <h3 class="skills__title">Coding Skills</h3>
                     <p>Started with Python, now in Java. Can make web servers with REST API. </p>
                     <ul>
-                        <li>
-                        <div><span>JAVA</span><span>98%</span></div>
-                        <div><div style="width: 80%"></div></div>
+                        <div class="bar__box">
+                        <li class="bar">
+                            <div class="bar__metadata">
+                                <span>JAVA</span><span>70%</span>
+                            </div>
+                            <div class="bar__bg">
+                                <div class="bar__value" style="width: 80%"></div>
+                            </div>
+                            <div class="bar__detail">
+                                <p class="bar__detail__text">I like Java. I can study.</p>
+                            </div>
                         </li>
-                        <li>
-                        <div><span>Spring</span><span>90%</span></div>
-                        <div><div style="width: 30%"></div></div>
+                        <li class="bar">
+                            <div class="bar__metadata">
+                                <span>Spring</span><span>70%</span>
+                            </div>
+                            <div class="bar__bg">
+                                <div class="bar__value" style="width: 70%"></div>
+                            </div>
+                            <div class="bar__detail">
+                                <p class="bar__detail__text">I like Java. I can study.</p>
+                            </div>
                         </li>
-                        <li>
-                        <div><span>HTML, CSS</span><span>90%</span></div>
-                        <div><div style="width: 90%"></div></div>
-                        </li>
-                        <li>
-                        <div><span>Github</span><span>50%</span></div>
-                        <div><div style="width: 50%"></div></div>
-                        </li>
-                        <li>
-                        <div><span>AWS</span><span>70%</span></div>
-                        <div><div style="width: 79%"></div></div>
-                        </li>
+                        </div>
+
+
+                        <div class="bar__box">
+                            <li class="bar">
+                                <div class="bar__metadata">
+                                    <span>HTML</span><span>70%</span>
+                                </div>
+                                <div class="bar__bg">
+                                    <div class="bar__value" style="width: 80%"></div>
+                                </div>
+                                <div class="bar__detail">
+                                    <p class="bar__detail__text">I like Java. I can study.</p>
+                                </div>
+                            </li>
+                            <li class="bar">
+                                <div class="bar__metadata">
+                                    <span>CSS</span><span>70%</span>
+                                </div>
+                                <div class="bar__bg">
+                                    <div class="bar__value" style="width: 70%"></div>
+                                </div>
+                                <div class="bar__detail">
+                                    <p class="bar__detail__text">I like Java. I can study.</p>
+                                </div>
+                            </li>
+                            </div>
                     </ul>
                 </section>
             <!-- tools -->
@@ -159,10 +189,16 @@
             <section class="skills__language">
                 <h3 class="skills__title">Language</h3>
                 <ul>
-                    <li>
-                    <div><span>English</span><span>70%</span></div>
-                    <div><div style="width: 79%"></div></div>
+                    <li class="language__bar">
+                        <div class="language__bar__metadata">
+                            <span>English</span><span>90%</span>
+                        </div>
+                    <div class="language__bar__bg">
+                        <div class= "language__bar__value" style="width: 90%"></div>
+                    </div>
                     </li>
+
+
                     <div><span>Spanish</span><span>70%</span></div>
                     <div><div style="width: 79%"></div></div>
                     </li>
